<resources>
    <string name="app_name">Onlooker</string>
    <string name="send">Надіслати</string>
    <string name="type">Різновид</string>
    <string name="age">Вік</string>
    <string name="male">Чоловік</string>
    <string name="female">Жінка</string>
    <string name="gender">Стать</string>
    <string name="add_more">Додати ще</string>
    <string name="answer">Відповідь</string>
    <string name="create">Створити</string>
    <string name="cancel">Скасувати</string>
    <string name="name">Назва</string>
    <string name="new_type">Новий різновид</string>
    <string name="new_answer">Нова відповідь</string>
    <string name="title_activity_input">Створення</string>
    <string name="title_activity_list_questions">Питання</string>
    <string name="invalid_age">Недійсний вік</string>
    <string name="title_activity_answers_list">AnswersListActivity</string>
    <string name="deleted_template">Видалено %s</string>
    <string name="answers_list">Перелік відповідей</string>
    <string name="remove">Видалити</string>
    <string name="want_to_remove_question">Впевнені, хочете видалити питання?</string>
    <string name="undo">Відновити</string>
    <string name="log_out">Вийти</string>
    <string name="question">Питання</string>
    <string name="logged_out">Вилогінено</string>
    <string name="error">Помилка</string>
</resources>
