<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".InputActivity$PlaceholderFragment">


            <TextView
                style="@style/Label"
                android:labelFor="@+id/type_input"
                android:text="@string/type" />

            <Spinner
                android:id="@id/type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/Label"
                android:labelFor="@+id/age_input"
                android:text="@string/age" />

            <EditText
                android:id="@id/age_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                style="@style/Label"
                android:labelFor="@+id/gender_input"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@id/gender_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/male_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                style="@style/Label"
                android:labelFor="@+id/answer_input"
                android:text="@string/answer" />

            <Spinner
                android:id="@id/answer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/show_polls_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_poll_white_48dp"
        app:borderWidth="0dp"
        app:backgroundTint="@color/action_btn_bg"
        app:elevation="4dp"
        app:rippleColor="@color/action_btn_bg_pressed" />
</RelativeLayout>